# parasailors

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
benches/: pairwise.rs
parasail-sys/: Cargo.toml  build.rs
parasail-sys/parasail_c/: CMakeLists.txt
parasail_sys/: Cargo.toml  build.rs  fn.parasail_lookup_function.html  fn.parasail_lookup_function_info.html  fn.parasail_lookup_pcreator.html  fn.parasail_lookup_pfunction.html  fn.parasail_lookup_pfunction_info.html  fn.parasail_matrix_create.html  fn.parasail_matrix_free.html  fn.parasail_matrix_lookup.html  fn.parasail_nw.html  fn.parasail_nw_diag_16.html  fn.parasail_nw_diag_32.html  fn.parasail_nw_diag_64.html  fn.parasail_nw_diag_8.html  fn.parasail_nw_diag_avx2_256_16.html  fn.parasail_nw_diag_avx2_256_32.html  fn.parasail_nw_diag_avx2_256_64.html  fn.parasail_nw_diag_avx2_256_8.html  fn.parasail_nw_diag_avx2_256_sat.html  fn.parasail_nw_diag_knc_512_32.html  fn.parasail_nw_diag_sat.html  fn.parasail_nw_diag_sse2_128_16.html  fn.parasail_nw_diag_sse2_128_32.html  fn.parasail_nw_diag_sse2_128_64.html  fn.parasail_nw_diag_sse2_128_8.html  fn.parasail_nw_diag_sse2_128_sat.html  fn.parasail_nw_diag_sse41_128_16.html  fn.parasail_nw_diag_sse41_128_32.html  fn.parasail_nw_diag_sse41_128_64.html  fn.parasail_nw_diag_sse41_128_8.html  fn.parasail_nw_diag_sse41_128_sat.html  fn.parasail_nw_rowcol.html  fn.parasail_nw_rowcol_diag_16.html  fn.parasail_nw_rowcol_diag_32.html  fn.parasail_nw_rowcol_diag_64.html  fn.parasail_nw_rowcol_diag_8.html  fn.parasail_nw_rowcol_diag_avx2_256_16.html  fn.parasail_nw_rowcol_diag_avx2_256_32.html  fn.parasail_nw_rowcol_diag_avx2_256_64.html  (+1955 more)
parasail_sys/src/: lib.rs
parasailors/: enum.MatrixType.html  fn.global_alignment_score.html  fn.local_alignment_score.html  fn.local_alignment_score_no_profile.html  fn.local_alignment_stats.html  fn.semi_global_alignment_score.html  fn.semi_global_alignment_stats.html  index.html  sidebar-items.js  struct.AlignmentStats.html  struct.Matrix.html  struct.Profile.html
src/: align.rs  lib.rs  matrix.rs  profile.rs
(+23 files in other folders)
