[package]
name = "parasailors"
version = "0.2.3"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
license = "MIT"
documentation = "https://dikaiosune.github.io/parasailors"
repository = "https://github.com/dikaiosune/parasailors"
readme = "README.md"
keywords = ["simd", "bioinformatics", "sequence", "alignment"]
description = "SIMD accelerated pairwise genetic sequence alignment."

[dependencies]
libc = "0.2.7"
parasail-sys = "0.2.5"
