[package]
name = "parasail-sys"
version = "0.1.1"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
links = "parasail"
build = "build.rs"
license = "MIT"
documentation = "https://dikaiosune.github.io/parasailors"
repository = "https://github.com/dikaiosune/parasailors"
keywords = ["simd", "bioinformatics", "sequence", "alignment"]
description = "Native bindings to the parasail pairwise genetic sequence alignment library."

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
